second card on mobile version

--- a/index.html
+++ b/index.html
@@ -40,11 +40,16 @@
     </div>
 
     <div class="component__thankYou">
-      You selected <!-- Add rating here --> out of 5
-
-      Thank you!
+      <div class="image--container">
+        <img src="/images/illustration-thank-you.svg" alt="">
+      </div>
+      <div class="selected__text">
+        You selected <span class="selected__text__number"></span> out of 5
+      </div>
+      <h1>Thank you!</h1>
+      <p>We appreciate you taking the time to give a rating. If you ever need more support, don’t hesitate to get in touch!</p>
     
-      We appreciate you taking the time to give a rating. If you ever need more support, don’t hesitate to get in touch!
+      
     </div>
   </article>
   <script src="script.js"></script>
