enable js script for rating

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     </div>
 
-    <div class="component__thankYou">
+    <div class="component__thankYou hidden">
       <div class="image--container">
         <img src="/images/illustration-thank-you.svg" alt="">
       </div>
